--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <div class="watch-container">
+        <div class="project-heading">
+            <h1>javascript Stopwatch App</h1>
+        </div>
+        
         <p><span class="min-width" id="outputHour">00</span> : <span class="min-width" id="outputMinute">00</span> : <span class="min-width" id="outputSecond">00</span>  <span id="outputMilisecond">00</span></p>
         <div class="stopwatch-buttons">
             <button onclick="StartClock()" class="clock-button" id="startBtn">Start</button>
