--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Js Stopwatch</title>
+    <title>javaScript Stopwatch App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="watch-container">
         <div class="project-heading">
-            <h1>javascript Stopwatch App</h1>
+            <h1>javaScript Stopwatch App</h1>
         </div>
         
-        <p><span class="min-width" id="outputHour">00</span> : <span class="min-width" id="outputMinute">00</span> : <span class="min-width" id="outputSecond">00</span>  <span id="outputMilisecond">00</span></p>
+        <p><span class="min-width" id="outputHour">00</span> : <span class="min-width" id="outputMinute">00</span> : <span class="min-width" id="outputSec">00</span>  <span id="outputMilisec">00</span></p>
         <div class="stopwatch-buttons">
             <button onclick="StartClock()" class="clock-button" id="startBtn">Start</button>
             <button onclick="StopClock()" class="clock-button" id="stopBtn">Stop</button>
