--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>javaScript Stopwatch App</h1>
         </div>
         
-        <p><span class="min-width" id="outputHour">00</span> : <span class="min-width" id="outputMinute">00</span> : <span class="min-width" id="outputSec">00</span>  <span id="outputMilisec">00</span></p>
+        <p><span class="min-width" id="outputHour">0<small>h</small></span> : <span class="min-width" id="outputMinute">0<small>m</small></span> : <span class="min-width" id="outputSec">0<small>s</small></span>  <span id="outputMilisec">0<small>ms</small></span></p>
         <div class="stopwatch-buttons">
             <button onclick="StartClock()" class="clock-button" id="startBtn">Start</button>
             <button onclick="StopClock()" class="clock-button" id="stopBtn">Stop</button>
